# ha-analyzer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
app/: __init__.py  config.py  extensions.py
app/blueprints/: analysis.py  api.py  main.py  scenarios.py
app/models/: __init__.py  analysis_result.py  scenario.py
app/services/: analyzer.py  influxdb_service.py  notifier.py  ollama_service.py  scheduler.py
app/static/css/: input.css
app/templates/: base.html
app/templates/analysis/: detail.html  list.html
app/templates/main/: index.html
app/templates/scenarios/: form.html  list.html
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
