[project]
name = "ha-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-migrate==4.0.7",
    "flask-wtf==1.2.2",
    "sqlalchemy==2.0.36",
    "gunicorn==22.0.0",
    "structlog==25.1.0",
    "influxdb-client==1.44.0",
    "apscheduler==3.10.4",
    "httpx==0.27.2",
    "wtforms==3.2.1",
    "werkzeug>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "black>=25",
    "pytest>=8.3",
    "pytest-flask>=1.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
